--- a/species_identify.yml
+++ b/species_identify.yml
@@ -1,5 +1,6 @@
 name: species_identify
 channels:
+  - bioconda
   - conda-forge
 dependencies:
   - python=3.12.1
@@ -7,3 +8,6 @@ dependencies:
   - numpy=1.26.3
   - tabulate=0.9.0
   - bioconda::pyteomics
+  - pip
+  - pip:
+    - git+https://github.com/TobyL98/RP1_m-z_speciesidentify.git
