--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,9 @@ numpy = ">=1.26"
 tabulate = ">=0.9"
 pyteomics = ">=4.7"
 tqdm = ">=4.67"
+taxopy = "^0.14.0"
+ete3 = "^3.1.3"
+ete4 = {git = "https://github.com/etetoolkit/ete.git"}
 
 [tool.poetry.group.dev.dependencies]
 
